--- a/app/angular.json
+++ b/app/angular.json
@@ -28,18 +28,13 @@
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "./node_modules/bootstrap/scss/bootstrap.scss",
               "./node_modules/font-awesome/scss/font-awesome.scss",
               "./node_modules/swiper/swiper.scss",
               "./node_modules/swiper/swiper-bundle.css",
-              "./node_modules/flat-icons/ecommerce.css",
-              "./node_modules/flat-icons/interface.css",
-              "./node_modules/flat-icons/technology.css",
-              "./node_modules/flat-icons/creative.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/swiper/swiper-bundle.min.js"]
           },
           "configurations": {
             "production": {
